--- a/insta/templates/the-gram/base.html
+++ b/insta/templates/the-gram/base.html
@@ -7,9 +7,9 @@
     <title><i class="fas fa-user-secret"></i>&nbsp;&nbsp;&nbsp;FOR THE GRAM - {{title}}</title>
     {% else %}
     <title>FOR THE GRAM </title>
-    <link rel="icon" type="image/x-icon" href="/static/css/user-secret.svg"> {% endif %} {% block styles %} {% bootstrap_css %}
+    <link rel="icon" type="image/x-icon" href="/static/image/logoo.jpeg"> {% endif %} {% block styles %} {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Exo+2&family=Playball&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"> {% endblock %}
 
