--- a/insta/templates/the-gram/index.html
+++ b/insta/templates/the-gram/index.html
@@ -1,4 +1,4 @@
-{%extends 'the-gram/base.html'%} {% block content %} {{block.super}}
+{%extends 'the-gram/base.html'%} {% block content %}{%load cloudinary%} {{block.super}}
 
 <div class="container">
 
