--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -5,36 +5,27 @@
 
         </div>
 
-        <div class="navbar-collapse collapse ">
-            <ul class="nav navbar-nav navbar-right" style="padding-right: 300px;">
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right" style="padding-right: 100px; padding-top: 30px;">
                 <li>
-                    <a href="{% url 'instaToday' %} "><img src="/static/image/home.png" alt="" style="height: 30px; width: 30px;"></a>
+                    <a href="{% url 'instaToday' %} "><img src="/static/image/home.png" alt="" style="height: 22px; width: 22px;"></a>
                 </li>
-                <li>
-                    <a href="/ "><img src="/static/image/arrow.png" alt="" style="height: 30px; width: 30px;">
-                    </a>
-                </li>
-                <li class="c">
-                    <a href="/"><img src="/static/image/compas.png" alt="" style="height: 40px; width: 40px; ">
-                    </a>
-                </li>
+                <li><img src="/static/image/paper-plane.svg" alt="" style="height: 22px; width: 22px;"></li>
+                <li class="c"><img src="/static/image/compas.png" alt="" style="height: 30px; width: 30px; "></li>
+
+                <li><img src="/static/image/heart.svg" alt="" style="height: 22px; width: 22px;"></li>
+
+                {% if user.is_authenticated %}
 
                 <li>
-                    <a href="/ "><img src="/static/image/heart.png" alt="" style="height: 30px; width: 50px;"></li>
-                {% if user.is_authenticated %}
-                <ul>
-                    <a href="{% url 'profile' %}">{{user.username}}</a>
-                    <a href="{%url 'new-post'%}">Post</a>
-                    <ul>
-                        <li>
-                            <a href="/logout">Logout</a>
-                        </li>
-                    </ul>
-                    </li>
-                </ul>
+                    <a href="{% url 'profile' %}"><img class="rounded-circle account-profile" src="{{ user.profile.profile_photo.url }}" alt="user" style="border-radius: 50%; width: 22px;"></a>
+                </li>
+                <li> <a href="{%url 'new-post'%}">Post</a></li>
+
+                <li> <a href="/logout">Logout</a></li>
                 {% else %}
                 <li>
-                    <a class='btn btn-default' href="/accounts/login">Login</a>
+                    <a class='btn btn-default' href="/accounts/register">Sign up</a>
                 </li>
                 {% endif %}
         </div>
