--- a/insta/templates/the-gram/index.html
+++ b/insta/templates/the-gram/index.html
@@ -1,31 +1,122 @@
-{%extends 'the-gram/base.html'%} {% block content %}{%load cloudinary%} {{block.super}}
+ {% extends 'the-gram/base.html' %} {% load static %}
 
-<div class="container">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
+<head>
+    <meta charset="utf-8">
+    <title></title>
+</head>
 
-    {% for image_item in insta %}
+<body>
+    {% block content %}
+    <hr class="mt-5">
+    <div class="container content-container content">
+        <div class="">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="container">
+                        <div class="row py-3">
+                            <div class=" ml-5" id="sticky-sidebar">
+                                <div class="friend">
+                                    <img class="rounded-circle account-profile" src="{{ user.photo.url }}" alt="user">
+                                    <div class="media-container">
+                                        <h2 class="account-header">{{user.username}}</h2>
+                                        <p class="text-info">{{user.email}}</p>
+                                    </div>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h3 class="mt-2">OtherPeople</h3>
+                                                <hr>
+                                                <div class="follow">
+                                                    {% for user in users %}
+                                                    <div class="mt-3">
+                                                        <a href="{% url 'posts' %}">
+                                                            <span>{{user.username}}</span>
+                                                            <br> {% if not user in followers%}
+                                                            <a href="{% url 'follow' operation='add' pk=user.pk %}">
+                                                                <button class="btn btn-outline-info" type="text">Follow</button>
+                                                            </a>
+                                                            {% endif %}
+                                                        </a>
+                                                    </div>
+                                                    {% endfor %}
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <h3 class="mt-2">Following</h3>
+                                                <hr>
+                                                <div class="unfollow">
+                                                    {% for follower in followers %}
+                                                    <div class="add">
+                                                        <a class="text-black" href="{% url 'posts' %}">
+                                                            <span class="text-black">{{follower.username}}</span>
 
-    <div class="row ">
+                                                            <a href="{% url 'follow' operation='remove' pk=follower.pk %}">
+                                                                <button class="btn btn-outline-danger" type="button" name="button">Unfollow</button>
+                                                            </a>
+                                                        </a>
+                                                    </div>
+                                                    {% endfor %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    {% for image in insta %}
+                    <div class="media-container">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="card-image">
+                                    <div class="profile-image">
+                                        <img class="profile-image" src="{{ image.author.profile_photo.url }}" alt="img">
+                                    </div>
+                                    <div class="post-author">
+                                        <h5 class="account-header mb-2">{{post.author}}</h5>
+                                    </div>
+                                    <a href="{% url 'commenting' post.id %}"><img class="w-100" src="{{image.photo.url}}" alt="{{image.author}}"></a>
+                                </div>
+                                <div class="post-info">
+                                    <div class="post-caption">
+                                        <p class="text-black mt-2">{{image.caption}}</p>
+                                    </div>
+                                    <div class="post-date">
+                                        <p>{{post.created_date|timesince}} ago</p>
+                                        <a class="text-info ml-3" href="{% url 'commenting' image.id%}"><i class="fa fa-comment"></i>
+                                {{image.comments.all.count}} {{image.comments.all.pluralize}}</a>
+                                        <a class="text-info ml-3" href="#"><i class="fa fa-share"></i></a>
 
-        <div class=" col-md-6 ">
+                                        <div class="count">
+                                            {% if image.likes.id == user.id %}
+                                            <a class="text-danger ml-3" href="{% url 'likes' image.id%}"><i class="fa fa-heart "></i>{{image.likes.count}}</a> {% else %}
+                                            <a class="text-info ml-2" href="{% url 'likes' image.id%}"><i class="fa fa-heart "></i>
+                                  {{image.likes.count}}
+                                </a> {% endif %}
 
-            <h2 class="text-center "> <img src="{{ image_item.photo.url }}" alt="" style="width: 300px;"></h2>
-            <p class="text-center "> {{ image_item.name }} </p>
-            <p class="text-center "> {{ image_item.image_caption }} </p>
-            <p class="text-center "> {{ image_item.likes }} </p>
-            <p class="text-center "> {{ image_item.comment }} </p>
+                                        </div>
+                                    </div>
+                                    <div class="comment mt-2">
+                                        <form action="{% url 'comment' post.id %}" method="post">
+                                            {% csrf_token %} {{comment_form}}
+                                            <input type="submit" class="btn btn-info" value="Comment">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
+    {% endblock %}
+</body>
 
-</div>
-
-{% empty %} {% endfor %}
-<section style="float: right; position: fixed; " class="col-md-6">
-    <div class="card-header">
-        By: {{image.author}}
-        <img src="{{image.author.profile.photo.url}}" alt="">
-    </div>
-
-</section>
-</div>
-{% endblock %}
+</html>
