install crispy forms

--- a/insta/templates/the-gram/index.html
+++ b/insta/templates/the-gram/index.html
@@ -1,122 +1,70 @@
- {% extends 'the-gram/base.html' %} {% load static %}
-
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
-    <meta charset="utf-8">
-    <title></title>
-</head>
-
-<body>
-    {% block content %}
-    <hr class="mt-5">
-    <div class="container content-container content">
-        <div class="">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="container">
-                        <div class="row py-3">
-                            <div class=" ml-5" id="sticky-sidebar">
-                                <div class="friend">
-                                    <img class="rounded-circle account-profile" src="{{ user.photo.url }}" alt="user">
-                                    <div class="media-container">
-                                        <h2 class="account-header">{{user.username}}</h2>
-                                        <p class="text-info">{{user.email}}</p>
-                                    </div>
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <h3 class="mt-2">OtherPeople</h3>
-                                                <hr>
-                                                <div class="follow">
-                                                    {% for user in users %}
-                                                    <div class="mt-3">
-                                                        <a href="{% url 'posts' %}">
-                                                            <span>{{user.username}}</span>
-                                                            <br> {% if not user in followers%}
-                                                            <a href="{% url 'follow' operation='add' pk=user.pk %}">
-                                                                <button class="btn btn-outline-info" type="text">Follow</button>
-                                                            </a>
-                                                            {% endif %}
-                                                        </a>
-                                                    </div>
-                                                    {% endfor %}
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <h3 class="mt-2">Following</h3>
-                                                <hr>
-                                                <div class="unfollow">
-                                                    {% for follower in followers %}
-                                                    <div class="add">
-                                                        <a class="text-black" href="{% url 'posts' %}">
-                                                            <span class="text-black">{{follower.username}}</span>
-
-                                                            <a href="{% url 'follow' operation='remove' pk=follower.pk %}">
-                                                                <button class="btn btn-outline-danger" type="button" name="button">Unfollow</button>
-                                                            </a>
-                                                        </a>
-                                                    </div>
-                                                    {% endfor %}
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+{% extends 'the-gram/base.html'%} {% block content %} {{ block.super }}
+<div class="container">
+    <h1></h1>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card mb-5">
+                {% for image in insta %}
+                <div class="card-header">
+                    By: {{image.author}}
+                    <img src="{{image.author.profile.image.url}}" alt="">
+                </div>
+                <!-- Image trigger modal -->
+                <img src="{{image.photo.url}}" class="mt-0" data-toggle="modal" data-target="#im{{image.id}}" id="myImg" class="mt-4" width="100%" alt="{{image.name}}">
+                <!-- Modal -->
+                <div class="modal fade" id="im{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModal3Label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <h5 class="modal-title text-center" id="exampleModal3Label">{{image.image_name}}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                            <div class="modal-header">
+                                <img src="{{image.photo.url}}" class="mt-0" data-toggle="modal" data-target="#im{{image.id}}" id="myImg" class="mt-4" width="100%" alt="{{image.img_name}}">
                             </div>
+                            <div class="modal-body">
+
+                                <i class="fa fa-heart" style="color:red; font-size:40px;">{{image.likes}} likes</i>
+                                <p class="text-muted">
+                                    Caption: ~{{image.caption}}~
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    {% for image in insta %}
-                    <div class="media-container">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="card-image">
-                                    <div class="profile-image">
-                                        <img class="profile-image" src="{{ image.author.profile_photo.url }}" alt="img">
-                                    </div>
-                                    <div class="post-author">
-                                        <h5 class="account-header mb-2">{{post.author}}</h5>
-                                    </div>
-                                    <a href="{% url 'commenting' post.id %}"><img class="w-100" src="{{image.photo.url}}" alt="{{image.author}}"></a>
-                                </div>
-                                <div class="post-info">
-                                    <div class="post-caption">
-                                        <p class="text-black mt-2">{{image.caption}}</p>
-                                    </div>
-                                    <div class="post-date">
-                                        <p>{{post.created_date|timesince}} ago</p>
-                                        <a class="text-info ml-3" href="{% url 'commenting' image.id%}"><i class="fa fa-comment"></i>
-                                {{image.comments.all.count}} {{image.comments.all.pluralize}}</a>
-                                        <a class="text-info ml-3" href="#"><i class="fa fa-share"></i></a>
+                <form action="" class="form-group container" method="post" class="mt-2 ">
+                    {% csrf_token %} {{ form }}
+                    <input type="hidden" value="{{image.pk}}" name="image_id">
+                    <button class="btn btn-sm btn-info"> post </button>
+                </form>
+                <hr>
+                <strong class="container">Comments:</strong><br> {% for comment in comments%} {% if image.pk == comment.image.pk %}
+                <p class="container">{{comment.comment}}</p>
+                {% endif %} {% endfor %} {% empty %}
+                <p>No images have been posted yet</p>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-4 d-inline-block">
+            <a href="{% url 'profile'%}">
+                <p class="mt-5">@{{user.username}}</p>
+                <img src="{{ user.profile.profile_photo.url}}" height="100px" width="100px" class="rounded-circle" alt="profile photo">
+            </a>
+            <h5>Suggestions to follow</h5>
+            {% for user in users%} {% if current_user.username == user.username %}
+            <p style="display:none;">{{user.username}}</p>
+            {% else %}
+            <div class="form-inline">
+                <h6>{{user.username}}</h6>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                                        <div class="count">
-                                            {% if image.likes.id == user.id %}
-                                            <a class="text-danger ml-3" href="{% url 'likes' image.id%}"><i class="fa fa-heart "></i>{{image.likes.count}}</a> {% else %}
-                                            <a class="text-info ml-2" href="{% url 'likes' image.id%}"><i class="fa fa-heart "></i>
-                                  {{image.likes.count}}
-                                </a> {% endif %}
-
-                                        </div>
-                                    </div>
-                                    <div class="comment mt-2">
-                                        <form action="{% url 'comment' post.id %}" method="post">
-                                            {% csrf_token %} {{comment_form}}
-                                            <input type="submit" class="btn btn-info" value="Comment">
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
+                <img src="{{ user.profile.profile_photo.url}}" height="100px" width="100px" class="mt-5 rounded-circle" alt=""> &nbsp;&nbsp;&nbsp;
+                <button class="btn btn-sm">Follow</button> {% endif %} {% endfor %}
             </div>
         </div>
     </div>
-    {% endblock %}
-</body>
-
-</html>
+</div>
+{% endblock %}
