--- a/insta/templates/the-gram/comments.html
+++ b/insta/templates/the-gram/comments.html
@@ -10,16 +10,16 @@
             <div class="post-author">
                 <h5 class="account-header mb-2">{{image.author}}</h5>
             </div>
-            <img src="{{posts.image.url}}" class=" mt-2 w-100" alt="">
+            <img src="{{image.photo.url}}" class=" mt-2 w-100" alt="">
             <p class="mt-3">{{image.caption}}</p>
-            <p>{{posts.created_date|timesince}} ago</p>
+
 
         </div>
         <div class="col-md-5">
             <div class="comment ml-5">
                 <h4>Comments</h4>
                 <blockquote class="blockquote ">
-                    {% for comment in posts.comments.all %}
+                    {% for comment in insta.comments.all %}
                     <p class="mb-0 text-black">~ {{comment.comment}}</p>
                     {% empty %}
                     <p>No Comments</p>
