--- a/insta/templates/the-gram/index.html
+++ b/insta/templates/the-gram/index.html
@@ -1,4 +1,4 @@
-{% extends 'the-gram/base.html'%} {% block content %} {{ block.super }}
+{% extends 'the-gram/base.html'%} {% load crispy_forms_tags %}{% block content %} {{ block.super }}
 <div class="container">
     <h1></h1>
     <div class="row">
@@ -7,7 +7,7 @@
                 {% for image in insta %}
                 <div class="card-header">
                     By: {{image.author}}
-                    <img src="{{image.author.profile.image.url}}" alt="">
+                    <img src="{{image.author.profile.photo.url}}" alt="">
                 </div>
                 <!-- Image trigger modal -->
                 <img src="{{image.photo.url}}" class="mt-0" data-toggle="modal" data-target="#im{{image.id}}" id="myImg" class="mt-4" width="100%" alt="{{image.name}}">
@@ -26,7 +26,7 @@
 
                                 <i class="fa fa-heart" style="color:red; font-size:40px;">{{image.likes}} likes</i>
                                 <p class="text-muted">
-                                    Caption: ~{{image.caption}}~
+                                    Caption: ~{{image.image_caption}}~
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -34,37 +34,38 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="form-group container" method="post" class="mt-2 ">
-                    {% csrf_token %} {{ form }}
-                    <input type="hidden" value="{{image.pk}}" name="image_id">
-                    <button class="btn btn-sm btn-info"> post </button>
-                </form>
+
                 <hr>
-                <strong class="container">Comments:</strong><br> {% for comment in comments%} {% if image.pk == comment.image.pk %}
-                <p class="container">{{comment.comment}}</p>
-                {% endif %} {% endfor %} {% empty %}
-                <p>No images have been posted yet</p>
-                {% endfor %}
+                <div class="comment mt-2">
+                    <form action="/comment/{{image.id}}" method="post">
+                        {% csrf_token %} {{comment_form}}
+                        <input type="submit" class="btn btn-info" value="Comment">
+                    </form>
+
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="col-md-2"></div>
-        <div class="col-md-4 d-inline-block">
-            <a href="{% url 'profile'%}">
-                <p class="mt-5">@{{user.username}}</p>
-                <img src="{{ user.profile.profile_photo.url}}" height="100px" width="100px" class="rounded-circle" alt="profile photo">
+        <div class="col-md-4  ">
+            <a href="{% url 'profile'%} ">
+                <p class="mt-5 ">@{{user.username}}</p>
+                <img src="{{ user.profile.profile_photo.url}} " style="border-radius: 50%; width: 70px; height: 70px; " alt="profile photo ">
             </a>
             <h5>Suggestions to follow</h5>
             {% for user in users%} {% if current_user.username == user.username %}
-            <p style="display:none;">{{user.username}}</p>
+            <p style="display:none; ">{{user.username}}</p>
             {% else %}
-            <div class="form-inline">
+            <div class="form-inline ">
                 <h6>{{user.username}}</h6>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                <img src="{{ user.profile.profile_photo.url}}" height="100px" width="100px" class="mt-5 rounded-circle" alt=""> &nbsp;&nbsp;&nbsp;
-                <button class="btn btn-sm">Follow</button> {% endif %} {% endfor %}
+                <img src="{{ user.profile.profile_photo.url}} " style="border-radius: 50%; width: 70px; height: 70px; " alt=" "> &nbsp;&nbsp;&nbsp;
+                <button class="btn btn-sm ">Follow</button> {% endif %} {% endfor %}
             </div>
         </div>
     </div>
 </div>
+</div>
+
 {% endblock %}
