--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,3 +6,22 @@ h1 {
     border: 1px solid rgb(198, 201, 198);
     height: 100%;
 }
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
+
+/* Style the label to display next to the inputs */
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
