--- a/insta/templates/the-gram/comments.html
+++ b/insta/templates/the-gram/comments.html
@@ -5,12 +5,12 @@
         <div class="col-md-2"></div>
         <div class="col-md-5">
             <div class="profile-image">
-                <img class="profile-image" src="{{ user.profile.image.url }}" alt="img">
+                <img class="profile-image" src="{{ user.profile.profile_photo.url}}" alt="img" style=" width: 100px; height: 100px;">
             </div>
             <div class="post-author">
                 <h5 class="account-header mb-2">{{image.author}}</h5>
             </div>
-            <img src="{{image.photo.url}}" class=" mt-2 w-100" alt="">
+            <img src="{{image.profile.photo_image.url}}" class=" mt-2 w-100" alt="">
             <p class="mt-3">{{image.caption}}</p>
 
 
@@ -24,7 +24,7 @@
                     {% empty %}
                     <p>No Comments</p>
                     {% endfor %}
-                    <footer class="blockquote-footer">By<cite title="Source Title">{{comment.user}}</cite></footer>
+                    <footer class="blockquote-footer">By<cite title="Source Title">{{comment.user.username}}</cite></footer>
                 </blockquote>
             </div>
         </div>
