--- a/insta/templates/the-gram/search.html
+++ b/insta/templates/the-gram/search.html
@@ -1,37 +1,9 @@
 {% extends 'the-gram/base.html' %} {% block content %}
-<br><br>
-<br><br>
-<div class="container ">
-    <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-            {% if posts %}
-            <div class="post">
-                <img class="rounded-circle account-profile" src="{{ user.profile.image.url }}" alt="user">
-                <div class="media-container">
-                    <h2 class="account-header">{{user.username}}</h2>
-                    <p class="text-info">{{user.email}}</p>
-                </div>
-                <p>{{user.profile.bio}}</p>
-            </div>
-            {% else %}
-            <h3>0 users with the search term {{message}}</h3>
-            {% endif %}
-        </div>
-    </div>
-    <div class="row">
-        {% if image %} {% for post in iimage %}
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <h2>{{image.author}}</h2>
-                    <img src="{{post.profile.photo.url}}" alt="posts">
-                    <p class="mt-3">{{post.image_caption}}</p>
-
-                </div>
-            </div>
-        </div>
-        {% endfor %} {% endif %}
-    </div>
+<div class="container">
+    {% if insta %} {% for image in insta %}
+    <p>You searched for {{message}}</p>
+    <img src="{{image.profile_photo.url}}" alt="images"> {% endfor %} {% else %}
+    <p>No user found</p>
+    {% endif %}
 </div>
 {% endblock %}
